--- a/assets/css/gaya.css
+++ b/assets/css/gaya.css
@@ -267,19 +267,40 @@
 
 /****/
 .area-menu-fip {
-	/*border: 2px solid green;*/
 	background-color: #bd1007;
 
-	border-radius: 0.42rem;
-	/*width: 200px;*/
-	/*height: 100%;*/
+	-webkit-border-radius: 10px; 
+	-moz-border-radius: 10px;
+	border-radius: 10px; 
+
 	margin-top: 10px;
 	position: fixed;
 	right: 100px;
-
-	/*display: flex;*/
-	/*justify-content: center; /* align horizontal */*/
-	/*align-items: center; /* align vertical */*/
+}
+.area-menu-fip #accordion {
+	min-width: 120px;
+	border-bottom: 1px solid rgba(255,255,255,0.4) !important;
+	margin-bottom: 10px;
+}
+.area-menu-fip #accordion .panel-title a {
+	display: block;
+	/*border: 1px solid red;*/
+	padding: 4px 0 4px;
+}
+.area-menu-fip button.navbar-toggle {
+	white-space: nowrap;
+}
+.area-menu-fip button.navbar-toggle i {
+	vertical-align: baseline;
+}
+@media screen and (max-width:767px) {
+	.area-menu-fip {
+		/*border: 2px solid green;*/
+		/*padding: 10px;*/
+	}
+	.area-menu-fip button.navbar-toggle {
+		white-space: nowrap;
+	}
 }
 .area-menu-fip button {
 	padding-top: 6px;
@@ -290,7 +311,7 @@
 	right: 0;
 }
 .area-menu-fip #navbar {
-	margin-top: 60px;
+	margin-top: 40px;
 }
 .area-menu-fip nav.navbar.navbar-default {
 	margin-bottom: 0px;
@@ -332,6 +353,9 @@
 .area-menu-fip ul.dropdown-menu li:last-child > a {
 	border-bottom: none;
 }
+.area-menu-fip ul.dropdown-menu > li > a:hover {
+	background-color: rgba(0,0,0,0.1);
+}
 
 .area-menu-fip .subheader {
 	/*border: 2px solid red;*/
@@ -344,7 +368,7 @@
 }
 .area-menu-fip .panel-heading {
 	border-top: 1px solid rgba(255,255,255,0.4) !important;
-	border-bottom: 1px solid rgba(255,255,255,0.4) !important;
+	/*border-bottom: 1px solid rgba(255,255,255,0.4) !important;*/
 	font-family: 'Catamaran Bold';
 	
 }
@@ -483,6 +507,7 @@ ul.breadcrumb li a.text-muted {
 /****/
 .area-ulasan-data-asn {
 	background-color: #f4953f;
+	margin-top: 20px;
 
 	-webkit-border-radius: 20px;
 	-webkit-border-top-right-radius: 40px;
@@ -803,7 +828,7 @@ ul.breadcrumb li a.text-muted {
 
 /****/
 .area-biodata-pegawai {
-	border: 1px solid red;
+	/*border: 1px solid red;*/
 }
 .area-biodata-pegawai .nav.nav-tabs {
 	padding-left: 20px;
@@ -831,6 +856,21 @@ ul.breadcrumb li a.text-muted {
 	-moz-border-radius: 20px;
 	border-radius: 20px;
 }
+.area-biodata-pegawai .tab-content .form-horizontal {
+	padding: 15px 15px 5px;
+}
+.area-biodata-pegawai .control-label {
+	font-family: 'Catamaran Bold';
+	/*border: 1px solid red;*/
+}
+.area-biodata-pegawai .form-control {
+	height: auto;
+	padding: 0 0 5px;
+	background: none;
+	border: none;
+	border-bottom: 1px solid rgba(0,0,0,0.1);
+	border-radius: 0px;
+}
 
 /****/
 .area-dynaport  {
@@ -849,4 +889,467 @@ ul.breadcrumb li a.text-muted {
 	padding-bottom: 0px;
 	height: inherit;
 }
+.area-dynaport .item input {
+	padding-top: 0px;
+	padding-bottom: 0px;
+	height: inherit;
+}
+.area-dynaport .item.item-header .nama,
+.area-dynaport .item.item-header .urutan,
+.area-dynaport .item.item-header .operasi,
+.area-dynaport .item.item-header .isi,
+.area-dynaport .item.item-header .aksi {
+	font-family: 'Catamaran Bold';
+	padding: 4px 6px;
+}
+.area-dynaport .item ~ .item .nama,
+.area-dynaport .item ~ .item .urutan,
+.area-dynaport .item ~ .item .operasi,
+.area-dynaport .item ~ .item .isi,
+.area-dynaport .item ~ .item .aksi {
+	border-top: none;
+}
 
+/****/
+.appendme {
+	/*border: 2px solid green;*/
+	
+}
+.appendme .item {
+	/*border: 1px solid #ebedf3;*/
+	/*padding: 5px;*/
+
+	display: flex;
+	display: -webkit-flex;
+	flex-wrap: wrap;
+}
+.appendme .item:after {
+	content: "";
+	  clear: both;
+	  display: table;
+}
+.appendme .item .nama {
+	/*border: 1px solid red;*/
+	border: 1px solid #ebedf3;
+	float: left;
+	width: calc(100% - 100px - 40px);
+	padding: 4px 4px;
+}
+.appendme .item .urutan {
+	/*border: 1px solid red;*/
+	border: 1px solid #ebedf3;
+	float: left;
+	width: 100px;
+	padding: 4px 4px;
+}
+.appendme .item .aksi {
+	/*border: 1px solid red;*/
+	border: 1px solid #ebedf3;
+	float: left;
+	width: 40px;
+	height: 100%;
+	padding: 9px 6px;
+
+	display: flex;
+	justify-content: center; /* align horizontal */
+	align-items: center; /* align vertical */
+}
+.appendme .item .aksi i {
+	color: red;
+}
+
+/****/
+.appendme2 {
+	/*border: 2px solid green;*/
+	
+}
+.appendme2 .item-operasi {
+	/*border: 1px solid #ebedf3;*/
+	/*padding: 5px;*/
+
+	display: flex;
+	display: -webkit-flex;
+	flex-wrap: wrap;
+}
+.appendme2 .item-operasi:after {
+	content: "";
+	  clear: both;
+	  display: table;
+}
+.appendme2 .item-operasi .nama {
+	/*border: 1px solid red;*/
+	border: 1px solid #ebedf3;
+	float: left;
+	width: calc(100% - 100px - 50% - 40px);
+	padding: 4px 4px;
+}
+.appendme2 .item-operasi .operasi {
+	/*border: 1px solid red;*/
+	border: 1px solid #ebedf3;
+	float: left;
+	width: 100px;
+	padding: 4px 4px;
+}
+.appendme2 .item-operasi .isi {
+	/*border: 1px solid red;*/
+	border: 1px solid #ebedf3;
+	float: left;
+	width: 50%;
+	padding: 4px 4px;
+}
+.appendme2 .item-operasi .aksi {
+	/*border: 1px solid red;*/
+	border: 1px solid #ebedf3;
+	float: left;
+	width: 40px;
+	height: 100%;
+	padding: 9px 6px;
+
+	display: flex;
+	justify-content: center; /* align horizontal */
+	align-items: center; /* align vertical */
+}
+.appendme2 .item-operasi .aksi i {
+	color: red;
+}
+
+/****/
+/* style menu container */
+.menu {
+  display: none;
+  position: absolute;
+  border: 1px solid black;
+  background-color: rgb(244, 239, 210);
+}
+
+/* style menu items */
+.option {
+  padding: 10px;
+  cursor: pointer;
+}
+
+.option:hover {
+  background-color: rgb(222, 159, 23);
+}
+
+/******/
+/* style menu container */
+.menu2 {
+  display: none;
+  position: absolute;
+  border: 1px solid black;
+  background-color: rgb(244, 239, 210);
+}
+
+/* style menu items */
+.option2 {
+  padding: 10px;
+  cursor: pointer;
+}
+
+.option2:hover {
+  background-color: rgb(222, 159, 23);
+}
+
+/****/
+#wrapper.menu {
+  margin-left: 10px;
+  width: 150px;
+  /*height: 200px;*/
+  padding: 0px;
+  background-color: #D0D0D0;
+}
+
+#wrapper.menu ul {
+  /*font-family: Veranda, Ariel, Sans-Serif;*/
+  /*font-size: 16px;*/
+  padding: 0px;
+  list-style: none;
+  letter-spacing: 2px;
+  text-align: center;
+  margin-bottom: 0px;
+}
+
+#wrapper.menu ul li {
+  display: block;
+  position: relative;
+  width: 150px;
+}
+
+#wrapper.menu li ul {
+  display: none;
+  margin: 0;
+}
+
+#wrapper.menu ul li a {
+  display: block;
+  text-decoration: none;
+  /*background: gray;*/
+  color: #000;
+  border-top: 1px solid #666;
+  padding: 5px 15px 5px 15px;
+  /*margin-left: 1px;*/
+  white-space: nowrap;
+
+  /*border: 1px solid red;*/
+}
+
+#wrapper.menu ul li a:hover {
+  background: #949494;
+}
+
+#wrapper.menu li:hover ul {
+  display: block;
+  position: absolute;
+}
+
+#wrapper.menu li:hover li {
+  float: left;
+  font-size: 11px;
+}
+
+#wrapper.menu li:hover a {
+  background: #A0A0A0;
+}
+
+#wrapper.menu li:hover li a:hover {
+  background: #C2C2C2;
+}
+
+#wrapper.menu ul li ul {
+  position: absolute;
+  left: 100%;
+  top: 0;
+}
+
+/****/
+#wrapper.menu2 {
+  margin-left: 10px;
+  width: 150px;
+  /*height: 200px;*/
+  padding: 0px;
+  background-color: #D0D0D0;
+}
+
+#wrapper.menu2 ul {
+	/*font-family: Veranda, Ariel, Sans-Serif;*/
+	/*font-size: 16px;*/
+	padding: 0px;
+	list-style: none;
+	letter-spacing: 2px;
+	text-align: center;
+	margin-bottom: 0px;
+}
+
+#wrapper.menu2 ul li {
+  display: block;
+  position: relative;
+  width: 150px;
+}
+
+#wrapper.menu2 li ul {
+  display: none;
+  margin: 0;
+}
+
+#wrapper.menu2 ul li a {
+  display: block;
+  text-decoration: none;
+  /*background: gray;*/
+  color: #000;
+  border-top: 1px solid #666;
+  padding: 5px 15px 5px 15px;
+  /*margin-left: 1px;*/
+  white-space: nowrap;
+
+  /*border: 1px solid red;*/
+}
+
+#wrapper.menu2 ul li a:hover {
+  background: #949494;
+}
+
+#wrapper.menu2 li:hover ul {
+  display: block;
+  position: absolute;
+}
+
+#wrapper.menu2 li:hover li {
+  float: left;
+  font-size: 11px;
+}
+
+#wrapper.menu2 li:hover a {
+  background: #A0A0A0;
+}
+
+#wrapper.menu2 li:hover li a:hover {
+  background: #C2C2C2;
+}
+
+#wrapper.menu2 ul li ul {
+  position: absolute;
+  left: 100%;
+  top: 0;
+}
+
+/****/
+.area-button {
+	border-top: 1px solid #ebedf3;
+	border-bottom: 1px solid #ebedf3;
+
+	padding-top: 20px;
+	padding-bottom: 20px;
+}
+
+@media screen and (max-width:767px) {
+	body {
+		/*border: 3px solid green;*/
+	}
+	.header-mobile-fixed .header-mobile a {
+		width: 55%;
+		
+		/*border: 1px solid red;*/
+
+		display: flex;
+		justify-content: center; /* align horizontal */
+		align-items: center; /* align vertical */
+	}
+	.header-mobile-fixed .header-mobile a img {
+		width: 100%;
+		height: auto;
+	}
+	#kt_header .logo-header {
+		display: none;
+	}
+	.header-fixed.subheader-fixed.subheader-enabled .wrapper {
+		padding-top: 50px;
+	}
+	#kt_content {
+		/*border: 2px solid red;*/
+		height: calc(100vh - 100px);
+		overflow: auto;
+	}
+}
+
+/*loading bar*/
+.loading {
+  position: fixed;
+  z-index: 999;
+  height: 2em;
+  width: 2em;
+  overflow: show;
+  margin: auto;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+/* Transparent Overlay */
+.loading:before {
+  content: '';
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(rgba(20, 20, 20,.8), rgba(0, 0, 0, .8));
+
+  background: -webkit-radial-gradient(rgba(20, 20, 20,.8), rgba(0, 0, 0,.8));
+}
+
+/* :not(:required) hides these rules from IE9 and below */
+.loading:not(:required) {
+  /* hide "loading..." text */
+  font: 0/0 a;
+  color: transparent;
+  text-shadow: none;
+  background-color: transparent;
+  border: 0;
+}
+
+.loading:not(:required):after {
+  content: '';
+  display: block;
+  font-size: 10px;
+  width: 1em;
+  height: 1em;
+  margin-top: -0.5em;
+  -webkit-animation: spinner 150ms infinite linear;
+  -moz-animation: spinner 150ms infinite linear;
+  -ms-animation: spinner 150ms infinite linear;
+  -o-animation: spinner 150ms infinite linear;
+  animation: spinner 150ms infinite linear;
+  border-radius: 0.5em;
+  -webkit-box-shadow: rgba(255,255,255, 0.75) 1.5em 0 0 0, rgba(255,255,255, 0.75) 1.1em 1.1em 0 0, rgba(255,255,255, 0.75) 0 1.5em 0 0, rgba(255,255,255, 0.75) -1.1em 1.1em 0 0, rgba(255,255,255, 0.75) -1.5em 0 0 0, rgba(255,255,255, 0.75) -1.1em -1.1em 0 0, rgba(255,255,255, 0.75) 0 -1.5em 0 0, rgba(255,255,255, 0.75) 1.1em -1.1em 0 0;
+  box-shadow: rgba(255,255,255, 0.75) 1.5em 0 0 0, rgba(255,255,255, 0.75) 1.1em 1.1em 0 0, rgba(255,255,255, 0.75) 0 1.5em 0 0, rgba(255,255,255, 0.75) -1.1em 1.1em 0 0, rgba(255,255,255, 0.75) -1.5em 0 0 0, rgba(255,255,255, 0.75) -1.1em -1.1em 0 0, rgba(255,255,255, 0.75) 0 -1.5em 0 0, rgba(255,255,255, 0.75) 1.1em -1.1em 0 0;
+}
+
+/* Animation */
+
+@-webkit-keyframes spinner {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@-moz-keyframes spinner {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@-o-keyframes spinner {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes spinner {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
