--- a/assets/css/gaya.css
+++ b/assets/css/gaya.css
@@ -1068,6 +1068,7 @@ ul.breadcrumb li a.text-muted {
   letter-spacing: 2px;
   text-align: center;
   margin-bottom: 0px;
+  z-index: 9999999 !important;
 }
 
 #wrapper.menu ul li {
