--- a/assets/css/gaya.css
+++ b/assets/css/gaya.css
@@ -91,8 +91,10 @@
 .area-total-jenis-kelamin .item {
 	float: left;
 	width: calc(50% - 20px);
-	margin-left: 10px;
-	margin-right: 10px;
+/*	margin-left: 10px;
+	margin-right: 10px;*/
+	margin-left: 7.5px;
+	margin-right: 7.5px;
 	/*border: 1px solid black;*/
 
 	background: #f9292a;
@@ -102,10 +104,16 @@
 	-moz-border-radius: 20px;
 	border-radius: 20px; 
 }
-.area-total-jenis-kelamin .item:nth-child(1) {
+/*.area-total-jenis-kelamin .item:nth-child(1) {
+	background: #f9292a url(../../images/bg-dot.png) top -13px left 5px no-repeat;
+	background-size: 186px auto;
+}*/
+
+.area-total-jenis-kelamin .item {
 	background: #f9292a url(../../images/bg-dot.png) top -13px left 5px no-repeat;
 	background-size: 186px auto;
 }
+
 .area-total-jenis-kelamin .ikon {
 	float: left;
 	width: 80px;
